--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ input[type="text"], input[type="number"] {
     border-radius: 5px;
     display: block;
     transition: border-color 0.3s;
+    font-size: 16px; /* Ajuste para iOS para evitar el zoom */
 }
 
 input[type="text"]:focus, input[type="number"]:focus {
@@ -75,4 +76,24 @@ button:hover {
     border-radius: 5px;
     color: #333;
     font-weight: bold;
+}
+
+@media (max-width: 600px) {
+    .container {
+        padding: 20px;
+        width: 100%;
+    }
+
+    input[type="text"], input[type="number"] {
+        width: 100%; /* Cambia de calc(100% - 20px) a 100% para pequeños ajustes */
+    }
+
+    button {
+        width: 100%; /* Botones a ancho completo para facilitar la interacción */
+        margin-top: 10px;
+    }
+
+    h1 {
+        font-size: 24px; /* Reduce el tamaño del título para pantallas pequeñas */
+    }
 }
